# tauri-nextjs-starter

./: LICENSE  cspell.config.ts  eslint.config.ts  lint-staged.config.ts  package.json  pnpm-lock.yaml  postcss.config.ts  tsconfig.json
.cspell/: cspell-ext.txt
.github/workflows/: ci.yml
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/utils/: mod.rs  window.rs
