[package]
authors = ["Clover You <hi@clovu.me>"]
description = "A Tauri App template with NextJS"
edition = "2024"
license-file = "../LICENSE"
name = "rust-tauri-nextjs-template"
readme = "../README.md"
repository = "https://github.com/clovu/tauri-nextjs-starter"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "rust_tauri_nextjs_template_lib"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-utils = "2.8.3"
tokio = { version = "1.52.0", features = ["tokio-macros", "macros"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
